--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="container">
-      <p id="top-section-for-adding-element-to-list">
+      <p id="section-header">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="text">
