--- a/index.html
+++ b/index.html
@@ -5,49 +5,49 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" class="header-img">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="container">
       <p id="section-header">
-        <label for="new-task">Add Item</label>
+        <label for="new-task" class="section-title">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <input id="new-task"class="input-text" type="text">
+          <button class="btn">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="section-title">Todo</h3>
+      <ul id="incomplete-tasks" class="task-list">
+        <li class="list-item">
+          <input type="checkbox" class="input-checkbox">
+          <label class="task-label">Pay Bills</label>
+          <input type="text" class="input-text">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete">
+            <img src="./remove.svg" class="delete-icon">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="list-item edit-mode">
+          <input type="checkbox" class="input-checkbox">
+          <label class="task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="input-text">
+          <button class="btn edit">Save</button>
+          <button class="btn delete">
+            <img src="./remove.svg" class="delete-icon">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="section-title">Completed</h3>
+      <ul id="completed-tasks" class="task-list">
+        <li class="list-item">
+          <input type="checkbox" checked class="input-checkbox">
+          <label class="task-label">See the Doctor</label>
+          <input type="text" class="input-text">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete">
+            <img src="./remove.svg" class="delete-icon">
           </button>
         </li>
       </ul>
