fix(extended-1.2): add alt attributes for img tags

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body class="body">
     <header class="header">
       <h1 class="hidden">Todo App</h1>
-      <img src="./eisenhower-matrix.jpg" class="header-img">
+      <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix infographics with title how to make 
+      decisions on what's urgent and important" class="header-img">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="container">
@@ -28,7 +29,7 @@
             <input type="text" class="input-text">
             <button class="btn edit">Edit</button>
             <button class="btn delete">
-              <img src="./remove.svg" class="delete-icon">
+              <img src="./remove.svg" alt="" class="delete-icon">
             </button>
           </li>
           <li class="list-item edit-mode">
@@ -37,7 +38,7 @@
             <input type="text" value="Go Shopping" class="input-text">
             <button class="btn edit">Save</button>
             <button class="btn delete">
-              <img src="./remove.svg" class="delete-icon">
+              <img src="./remove.svg" alt="" class="delete-icon">
             </button>
           </li>
         </ul>
@@ -51,7 +52,7 @@
             <input type="text" class="input-text">
             <button class="btn edit">Edit</button>
             <button class="btn delete">
-              <img src="./remove.svg" class="delete-icon">
+              <img src="./remove.svg" alt="" class="delete-icon">
             </button>
           </li>
         </ul>
