--- a/index.html
+++ b/index.html
@@ -8,15 +8,28 @@
   <body class="body">
     <header class="header">
       <h1 class="header__title header__title_hidden">Todo App</h1>
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix infographics with title how to make 
-      decisions on what's urgent and important" class="header__img">
-      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img
+        src="./eisenhower-matrix.jpg"
+        alt="Eisenhower Matrix infographics with title how to make 
+        decisions on what's urgent and important"
+        class="header__img"
+      >
+      <a
+        class="header__link"
+        href="https://goal-life.com/page/method/matrix-eisenhower"
+      >
+        Want more details?
+      </a>
     </header>
     <main class="container">
       <section class="section section_add-item">
         <h2 class="section__title">Add Item</h2>
         <div class="section__task-wrapper">
-          <input id="new-task"class="section__input-text section__input-text_new" type="text">
+          <input
+            id="new-task"
+            class="section__input-text section__input-text_new"
+            type="text"
+          >
           <button class="section__btn">Add</button>
         </div>
       </section>
@@ -24,21 +37,42 @@
         <h2 class="section__title">Todo</h2>
         <ul id="incomplete-tasks" class="section__list">
           <li class="section__list-item">
-            <input type="checkbox" class="section__input-checkbox">
+            <input
+              type="checkbox"
+              class="section__input-checkbox"
+            >
             <label class="section__task-label">Pay Bills</label>
-            <input type="text" class="section__input-text">
+            <input
+              type="text"
+              class="section__input-text"
+            >
             <button class="section__btn section__btn_edit">Edit</button>
             <button class="section__btn section__btn_delete">
-              <img src="./remove.svg" alt="" class="section__btn-icon">
+              <img
+                src="./remove.svg"
+                alt=""
+                class="section__btn-icon"
+              >
             </button>
           </li>
           <li class="section__list-item section__list-item_edit-mode">
-            <input type="checkbox" class="section__input-checkbox">
+            <input
+              type="checkbox"
+              class="section__input-checkbox"
+            >
             <label class="section__task-label">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="section__input-text">
+            <input
+              type="text"
+              value="Go Shopping"
+              class="section__input-text"
+            >
             <button class="section__btn section__btn_edit">Save</button>
             <button class="section__btn section__btn_delete">
-              <img src="./remove.svg" alt="" class="section__btn-icon">
+              <img
+                src="./remove.svg"
+                alt=""
+                class="section__btn-icon"
+              >
             </button>
           </li>
         </ul>
@@ -47,12 +81,23 @@
         <h2 class="section__title">Completed</h2>
         <ul id="completed-tasks" class="section__list">
           <li class="section__list-item">
-            <input type="checkbox" checked class="section__input-checkbox">
+            <input
+              type="checkbox"
+              checked
+              class="section__input-checkbox"
+            >
             <label class="section__task-label">See the Doctor</label>
-            <input type="text" class="section__input-text">
+            <input
+              type="text"
+              class="section__input-text"
+            >
             <button class="section__btn section__btn_edit">Edit</button>
             <button class="section__btn section__btn_delete">
-              <img src="./remove.svg" alt="" class="section__btn-icon">
+              <img
+                src="./remove.svg"
+                alt=""
+                class="section__btn-icon"
+              >
             </button>
           </li>
         </ul>
